delete based off of connection id labels and not previous attempt ids